@@ -448,6 +448,7 @@ S3method(confint, hhh4)
 S3method(residuals, hhh4)
 S3method(predict, hhh4)
 S3method(update, hhh4)
+S3method(all.equal, hhh4)
 S3method(simulate, hhh4)
 S3method(plot, hhh4)
 export(plotHHH4_fitted, plotHHH4_fitted1,
